--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Fira+Sans+Condensed:ital,wght@0,400;0,700;1,400&family=Krub:wght@400;700&display=swap" rel="stylesheet">
     <title>Parque Agua Marina</title>
 </head>
 <body class="center">
@@ -13,7 +16,7 @@
 
     </div>
 
-    <p>______________________________________________________</p>
+
 
     <div>
         <p>
