add text and css refinements

--- a/index.html
+++ b/index.html
@@ -1,33 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Fira+Sans+Condensed:ital,wght@0,400;0,700;1,400&family=Krub:wght@400;700&display=swap" rel="stylesheet">
-    <title>Parque Agua Marina</title>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="stylesheet" href="style.css">
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Fira+Sans+Condensed:ital,wght@0,400;0,700;1,400&family=Krub:wght@400;700&display=swap" rel="stylesheet">
+	<title>Parque Agua Marina :: Participa con Nosotros</title>
 </head>
 <body class="center">
-    <div>
-        <img src="./i/parqueaguamarina-logo.svg" alt="parque">
-        <h1>Parque Agua Marina</h1>
+	<div>
+		<img src="./i/parqueaguamarina-logo.svg" alt="parque">
+		<h1>Participa con Nosotros</h1>
+	</div>
 
-    </div>
+	<div>
+		<p>
+			Vamos a crecer nuestro querido parque!
+		</p>
 
+		<p>
+			Necesitamos sus ideas, sugerencias, votos, tiempo voluntario, energía y donaciones financieras.
+			Regístrese con nosotros para informarnos sus preferencias y canales de comunicación:
+		</p>
 
+		<a href="https://docs.google.com/forms/d/e/1FAIpQLSdDTlnB4tixAcMLnWNdj8LjdHUxgxJ5e83sSK8p-hLboFZIfg/viewform?usp=sf_link">Registrese</a>
 
-    <div>
-        <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. In commodo magna eget diam posuere, in gravida magna convallis. Maecenas bibendum volutpat elit, non eleifend diam bibendum id. Duis et velit cursus, cursus lorem sit amet, aliquet nisi. Cras at dui justo. Curabitur rutrum euismod mauris. Etiam vitae sagittis lacus. Aenean ut volutpat diam. Aenean ac ipsum nunc.
-
-            Sed sit amet lacus accumsan, malesuada felis in, feugiat velit. Nulla sed orci commodo, consequat erat eget, efficitur dolor. Curabitur non condimentum mi, non pretium arcu. Nulla maximus nibh ante, quis lobortis libero tincidunt quis. Vestibulum vestibulum sem sit amet justo sagittis, quis ultrices diam feugiat. Nulla purus ante, pharetra et fringilla id, sodales et erat. Proin pulvinar erat porta mollis tempor. Aliquam tempor velit vel nulla porttitor consequat. Vivamus hendrerit rhoncus nibh, vitae laoreet enim vehicula sit amet. 
-        </p>
-
-        <a href="#">Registrese</a>
-    </div>
-
+		<!--
+		<p>
+			Si desea ayudarnos con cuotas mensuales voluntarias en las que podemos confiar para respaldar el mantenimiento regular del parque, considere hacer una donación mensual de s/30 para el período que comienza el
+			1 de septiembre de 2023. Con el nuevo ejecutivo, por favor utilice cualquiera de los siguientes canales para realizar sus amables donaciones:
+			
+				BCP	: 1949 1842 2270 24
+				CCI	: 002 1941 9184 2227 0249 1
+				YAPE	: 973 978 587
+				A nombre de: Asunta Fidelina Vega Sologuren (Tesorera)
+		</p>
+		-->
+	</div>
 
 </body>
 </html>
