add formating on lists

--- a/index.html
+++ b/index.html
@@ -27,6 +27,13 @@
 
 		<a href="https://docs.google.com/forms/d/e/1FAIpQLSdDTlnB4tixAcMLnWNdj8LjdHUxgxJ5e83sSK8p-hLboFZIfg/viewform?usp=sf_link">Registrese</a>
 
+		<p>El registro es rápido y sencillo y nos ayuda a:</p>
+		<ul>
+			<li>comprender sus preferencias de comunicación</li>
+			<li>otorgarle acceso a nuestros informes financieros y de proyectos en línea</li>
+			<li>obtener sus ideas y sugerencias</li>
+		</ul>
+
 		<!--
 		<p>
 			Si desea ayudarnos con cuotas mensuales voluntarias en las que podemos confiar para respaldar el mantenimiento regular del parque, considere hacer una donación mensual de s/30 para el período que comienza el
