larger button and text for fat fingers and stronger call to action

--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
 			Regístrese con nosotros para informarnos sus preferencias y canales de comunicación:
 		</p>
 
-		<a href="https://docs.google.com/forms/d/e/1FAIpQLSdDTlnB4tixAcMLnWNdj8LjdHUxgxJ5e83sSK8p-hLboFZIfg/viewform?usp=sf_link">Registrese</a>
+		<a href="https://docs.google.com/forms/d/e/1FAIpQLSdDTlnB4tixAcMLnWNdj8LjdHUxgxJ5e83sSK8p-hLboFZIfg/viewform?usp=sf_link"
+		>Registrese ahora</a>
 
 		<p>El registro es rápido y sencillo y nos ayuda a:</p>
 		<ul>
